# Loki11

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TutorialConfig.h.in  TutorialRuleset.ruleset  main.yml  x64-linux_responsefile.txt  x64-windows_responsefile.txt
.github/workflows/: blank.yml  main.yml  main2.yml
cmake/: CompilerWarnings.cmake  Iwyu.cmake
game24/: CMakeLists.txt  cal.cpp  exprs.cpp  test.cpp
include/: CMakeLists.txt  SmallObj.cpp  boolean.h  fold_wrapper.hpp  pretty_function.h  unique_pseudofunction.hpp
include/loki/: AbstractFactory.h  ConstPolicy.h  EmptyType.h  Factory.h  HierarchyGenerators.h  LockingPtr.h  MultiMethods.h  OrderedStatic.h  SPCachedFactory.h  SafeBits.h  Singleton.h  SmallObj.h  SmartPtr.h  StrongPtr.h  ThreadModel.h  Threads.h  Visitor.h  priority_tag.h  static_check.h
include/loki/flex/: simplestringstorage.h
include/loki/yasli/: yasli_memory.h  yasli_protocols.h
include/loki_ext/: Variant.h  compound_iterator.h  shared_any.cpp  smart_any_fwd.h  yasli_find.h
src/: CMakeLists.txt  Visitor.cpp  Void.h  abstractfactory.cpp  abstractfactoryTmp.cpp  ad_hoc.cpp  arrow_proxy.cpp  arrow_proxy.h  assert.cpp  concurrentQueue.cpp  detect_expr.h  enforce.cpp  exprs.h  false_v.hpp  knothash.h  minmax.cpp  multimethod.cpp  orderedstatic.cpp  priority_tag.hpp  ref_wrap_test.cpp  scopedAny.cpp  scopeguard.hpp  smartptr.cpp  source_location.hpp  splitview.h  subsume.hpp  tag_invoke.cpp  typelist.cpp  variant.cpp  world.cpp
src/loki/: AbstractFactory.h  CheckReturn.h  DataGenerators.h  HierarchyGenerators.h  LockingPtr.h  LokiTypeInfo.h  MultiMethods.h  Register.h  Sequence.h  SmartPtr.h  StrongPtr.cpp  Visitor.h
src/loki/flex/: allocatorstringstorage.h  cowstringopt.h  flex_string.h  flex_string_shell.h  smallstringopt.h  vectorstringstorage.h
src/loki/yasli/: yasli_protocols.h  yasli_vector.h
src/loki_ext/: InlineContainer.h  MinMax.h  adhocvistor.h  asserter.h  bin_find.cpp  enforce.h  hierarchy.h  hierarchy_traits.h  mojo.h  mojo2.h  unique_any.h  yasli_algorithm.h  yasli_sort.h
test/: CMakeLists.txt  test.cpp  test.vcproj  tests.cpp
test/AbstractFactory/: CMakeLists.txt  Factory.cpp  test.cpp
test/CachedFactory/: CachedFactory.vcxproj
test/CheckReturn/: CheckReturn.vcxproj  CheckReturn.vcxproj.filters  main.cpp
test/Checker/: Checker.vcxproj  Checker.vcxproj.filters
test/DeletableSingleton/: DeletableSingleton.vcxproj
test/Factory/: CMakeLists.txt  CloneFactory.cpp  Factory.cpp  Factory.vcxproj
test/LevelMutex/: LevelMutex.vcxproj  LevelMutex.vcxproj.filters
test/LockingPtr/: LockingPtr.vcxproj
test/Longevity/: Longevity.vcxproj
test/MultiMethod/: CMakeLists.txt  Multimethod.cpp
test/OrderedStatic/: OrderedStatic.vcxproj
test/Pimpl/: Pimpl.vcxproj
test/Register/: foo.cpp
test/RegressionTest/: AbstractFactoryTest.h  FactoryParmTest.h  FactoryTest.h  MSVCUnitTest.vcxproj  MSVCUnitTest_MSVC_8.vcproj  SmartPtrTest.h
test/SafeBits/: SafeBits.vcxproj  SafeBits.vcxproj.filters
test/SafeFormat/: SafeFormat.vcxproj  main.cpp
test/ScopeGuard/: ScopeGuard.vcxproj
test/Singleton/: Dependencies.cpp  Singleton.vcxproj
test/SmallObj/: DefaultAlloc.vcxproj  SmallObjCompare.vcxproj  SmallObjSingleton.cpp  SmallObjSingleton.vcxproj
test/SmartPtr/: CMakeLists.txt  SmartPtr.cpp  SmartPtr.vcxproj
test/ThreadModel/: Thread.cpp
test/Visitor/: CMakeLists.txt  Visitor.vcxproj  main.cpp
test/flex_string/: FBString.cpp  flex_string.vcxproj  flex_string.vcxproj.filters  flex_string_MSVC_8.vcproj  main.cpp  test_cin.cpp  world.txt
test/thread/: CMakeLists.txt
